# Trie

./: LICENSE  README.md  suffixTree.cabal  trie.cabal
src/: SuffixTree.hs  Trie.hs
