name:                trie
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/suffixTree#readme
license:             BSD3
license-file:        LICENSE
author:              Yiyun Liu
maintainer:          liuyiyun2005@yahoo.com
category:            Data Structures, Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     SuffixTree
  build-depends:       base >= 4.7 && < 5
                     , containers
  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/alcymd/suffixTree
